--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-speech-to-text": "^0.8.0",
+    "react-toastify": "^11.0.5",
     "react-webcam": "^7.2.0",
     "uuid": "^11.1.0"
   },
