--- a/package.json
+++ b/package.json
@@ -16,13 +16,19 @@
     "@neondatabase/serverless": "^0.10.4",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.40.0",
+    "formidable": "^3.5.2",
     "json5": "^2.2.3",
     "lucide": "^0.479.0",
     "moment": "^2.30.1",
+    "multer": "^1.4.5-lts.1",
     "next": "15.2.2",
+    "pdf-parse": "^1.1.1",
+    "pdf-text-extract": "^1.5.0",
+    "pdfjs-dist": "^5.0.375",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-speech-to-text": "^0.8.0",
+    "react-pdf": "^9.2.1",
     "react-toastify": "^11.0.5",
     "react-webcam": "^7.2.0",
     "uuid": "^11.1.0"
@@ -30,7 +36,10 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/formidable": "^3.4.5",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20",
+    "@types/pdf-parse": "^1.1.4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
